# essence-perfume-tracker

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: probe-ml.yml  probe-ripley.yml  scrape-daily.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
dashboard/: .env.local.example  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/alerts/: page.tsx
dashboard/app/api/alerts/: route.ts
dashboard/app/api/suggest/: route.ts
dashboard/app/perfume/[id]/: page.tsx
dashboard/components/: AlertForm.tsx  Combobox.tsx  DeleteAlertButton.tsx  PriceChart.tsx  SearchBox.tsx
dashboard/lib/: db.ts  utils.ts
docs/: DEPLOY.md
scrapers/: alerts.py  base.py  config.py  db.py  falabella.py  jumpseller.py  matcher.py  mercadolibre.py  migrate_brands.py  migrate_clones.py  migrate_names.py  migrate_rematch.py  models.py  normalize.py  paris.py  ripley.py  run_all.py  shopify.py  verify_urls.py
scripts/: audit_fresh.py  cl.essence.scraper.plist  install-cron.sh  uninstall-cron.sh
