[project]
name = "perfume-tracker"
version = "0.1.0"
description = "Tracker histórico de precios de perfumes en retailers chilenos"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "playwright>=1.47",
    "playwright-stealth>=1.0.6",
    "camoufox[geoip]>=0.4.0",
    "selectolax>=0.3.21",
    "tenacity>=9.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "structlog>=24.4",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scrapers"]
